src/test/resources/semantic_errors/check_all_returns.notc
void main() {
    return;
    return;
    return "fjhffdg";
}
